Add health probes to Ironic containers
Related-Prod: PRODX-46968
Change-Id: I72e4cf8373ecd40f9dd6f18eb82392ff207e5f24

--- a/charts/openstack/ironic/templates/configmap-bin.yaml
+++ b/charts/openstack/ironic/templates/configmap-bin.yaml
@@ -72,4 +72,6 @@ data:
 {{- include "helm-toolkit.scripts.rabbit_init" . | indent 4 }}
   update-nodes-metadata.py: |
 {{ tuple "bin/_update-nodes-metadata.py.tpl" . | include "helm-toolkit.utils.template" | indent 4 }}
+  health-probe.py: |
+{{- include "helm-toolkit.scripts.generic_health_probe" . | indent 4 }}
 {{- end }}
