[virtual_lab] Deploy Metallb
Related-Prod: PRODX-47767
Change-Id: I85aaec418fce8949dda25d2e7ac1d9b91eecebeb

--- a/virtual_lab/ansible/oc-install.yaml
+++ b/virtual_lab/ansible/oc-install.yaml
@@ -49,6 +49,10 @@
     include_role:
       name: oc
       tasks_from: lvp
+  - name: Setup Metallb
+    include_role:
+      name: oc
+      tasks_from: metallb
   - name: Setup openstack controller
     include_role:
       name: oc
