--- a/.gitignore
+++ b/.gitignore
@@ -71,6 +71,7 @@ instance/
 
 # Sphinx documentation
 docs/_build/
+docs_build/
 
 # PyBuilder
 target/
@@ -119,5 +120,5 @@ charts/openstack/*/requirements.lock
 charts/infra/*/requirements.lock
 virtual_lab/ansible/inventory/artifacts/
 virtual_lab/terraform/.terraform/
-virtual_lab/terraform/.terraform.lock.hcl
+virtual_lab/terraform/.terraform.lock.ld/hcl
 
