--- a/tox.ini
+++ b/tox.ini
@@ -15,6 +15,7 @@ allowlist_externals =
     find
     kubectl
     bash
+    mkdocs
 deps =
     .[test]
 setenv =
@@ -47,7 +48,7 @@ commands =
 envdir = {toxworkdir}/docs
 deps =
     -r{toxinidir}/docs/requirements.txt
-commands = sphinx-build -b html -W docs/source docs/build/html
+commands = mkdocs build -d docs_build
 
 [testenv:releasenotes]
 envdir = {toxworkdir}/docs
