--- a/charts/infra/mariadb/templates/secrets-etc.yaml
+++ b/charts/infra/mariadb/templates/secrets-etc.yaml
@@ -26,4 +26,5 @@ data:
   admin_user_internal.cnf: {{ tuple "secrets/_admin_user_internal.cnf.tpl" . | include "helm-toolkit.utils.template"  | b64enc }}
   {{- $rclone_conf := include "helm-toolkit.utils.to_ini" .Values.conf.rclone }}
   rclone.conf: {{ $rclone_conf | b64enc | default ("" | quote) }}
+  openssl_kek: {{ .Values.conf.phy_backup.openssl_kek | b64enc }}
 {{- end }}
