--- a/tests/fixtures/render_service_template/output/database/victoria_ceph_local_non_dvr_db_nfs_backup.yaml
+++ b/tests/fixtures/render_service_template/output/database/victoria_ceph_local_non_dvr_db_nfs_backup.yaml
@@ -16,6 +16,8 @@ spec:
         phy_backup:
           backup_type: incremental
           backend: pv_nfs
+          openssl_encryption: false
+          openssl_kek: "opensslkek"
       endpoints:
         cluster_domain_suffix: cluster.local
         oslo_db:
