--- a/openstack_controller/templates/services/database.yaml
+++ b/openstack_controller/templates/services/database.yaml
@@ -52,6 +52,8 @@ spec:
             remote: {{ remotes[0] }}
             path: {{ backup_sync['remotes'][remotes[0]]['path'] }}
           {%- endif %}
+          openssl_encryption: {{ backup_params.get("encryption", {}).get("enabled", False) }}
+          openssl_kek: {{ galera_creds.openssl_kek }}
       images:
         tags:
 {%- for image in [
