--- a/tests/fixtures/render_service_template/input/ussuri_ceph_local_dvr_onermq/context_template_args.yaml
+++ b/tests/fixtures/render_service_template/input/ussuri_ceph_local_dvr_onermq/context_template_args.yaml
@@ -130,6 +130,7 @@ database:
     sst:
       password: RbLblzhS7yNE8WQ4nY829uRQpvTegI87
       username: sstybw
+    openssl_kek: opensslkek
 dns:
   credentials: &credentials_dns
   - database:
