--- a/tests/fixtures/render_service_template/output/database/ussuri_ceph_local_non_dvr.yaml
+++ b/tests/fixtures/render_service_template/output/database/ussuri_ceph_local_non_dvr.yaml
@@ -16,6 +16,8 @@ spec:
         phy_backup:
           backup_type: incremental
           backend: pvc
+          openssl_encryption: false
+          openssl_kek: "opensslkek"
       endpoints:
         cluster_domain_suffix: cluster.local
         oslo_db:
