[aodh] Disable containers health probes before Yoga OS release
Related-Prod: PRODX-47784
Change-Id: I286253e26bdd524c8b17c15fe99c09471a934f02

--- a/openstack_controller/templates/services/alarming.yaml
+++ b/openstack_controller/templates/services/alarming.yaml
@@ -142,4 +142,26 @@ spec:
         db_purge:
           enabled: {{ aodh_db_cleanup.enabled }}
           cron: {{ aodh_db_cleanup.get('schedule', '1 6 * * 1') }}
+  {%- if OSVer[spec.openstack_version] < OSVer.yoga %}
+      pod:
+        probes:
+          evaluator:
+            evaluator:
+              readiness:
+                enabled: false
+              liveness:
+                enabled: false
+          listener:
+            listener:
+              readiness:
+                enabled: false
+              liveness:
+                enabled: false
+          notifier:
+            notifier:
+              readiness:
+                enabled: false
+              liveness:
+                enabled: false
+  {%- endif %}
 {%- endif %}
