--- a/tests/fixtures/render_service_template/output/alarming/ussuri_ceph_local_non_dvr_telemetry.yaml
+++ b/tests/fixtures/render_service_template/output/alarming/ussuri_ceph_local_non_dvr_telemetry.yaml
@@ -188,3 +188,23 @@ spec:
           restartPolicy: Never
         ks_user:
           restartPolicy: Never
+      pod:
+        probes:
+          evaluator:
+            evaluator:
+              readiness:
+                enabled: false
+              liveness:
+                enabled: false
+          listener:
+            listener:
+              readiness:
+                enabled: false
+              liveness:
+                enabled: false
+          notifier:
+            notifier:
+              readiness:
+                enabled: false
+              liveness:
+                enabled: false
