--- a/charts/openstack-operator/values.yaml
+++ b/charts/openstack-operator/values.yaml
@@ -128,6 +128,13 @@ osdpl:
             periodSeconds: 60
             timeoutSeconds: 5
         security_context: *security_context
+      configmaps:
+        liveness:
+          params:
+            initialDelaySeconds: 120
+            periodSeconds: 60
+            timeoutSeconds: 5
+        security_context: *security_context
       node_maintenance_request:
         liveness:
           params:
