--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -82,6 +82,7 @@ nav:
   - Quick Start:
     - AIO Installation: quick-start/aio-installation.md
     - Access OpenStack: quick-start/access-openstack.md
+  - Developer Guide: developer.md
   - Operations Guide:
     - Upgrade OpenStack: ops/openstack/upgrade.md
     - Run tempest: ops/openstack/tempest.md
